# ai-powerlifting-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/designing-training-block/: SKILL.md
.claude/skills/feedback/: SKILL.md
.claude/skills/reviewing-block/: SKILL.md
.claude/skills/reviewing-session/: SKILL.md
.github/workflows/: weekly-review.yml
brain/: active-issues.md  current-block.json  current-block.md  memory.md
data/: maxes.md
data/block-archive/: 2026-Q2-B02.md
data/logs/: .sync_cursor  workouts.csv
data/logs/sessions/: 00bf00f2-4157-44f3-bbac-c0bbc95cc19b.json  00cf2f67-8fc3-4337-a891-c79390123090.json  017e1aeb-9acd-43e9-8135-c13f5436f0cc.json  01d07bcd-cd8a-4dd1-ab67-c1d75266686f.json  01da0eaf-939a-4518-823e-366a3f57b0e4.json  02492329-4079-44d8-9315-d3722ee32fbb.json  027cb726-a9cd-46ff-8a27-951e6ebf3b8d.json  02ce26dc-6360-4734-ae4d-9af21f2218a3.json  02e14d8e-6321-463f-adb6-1fc6a08d66ef.json  02e2962e-fb3f-40d5-95bb-1405b805d461.json  04c95cba-6633-49c9-a427-8cffd7842538.json  (+674 more)
feedback/: log.md
reference/: goals.md  how-this-works.md  profile.md  programming-rules.md  protocols.md
reviews/: 2026-Q2-B01.md  2026-Q2-B02.md  README.md
reviews/weekly/: 2026-W25.md  2026-W26.md
scripts/: gen_skills_readme.py
scripts/hevy/: block_report.py  client.py  exercise_map.py  exercise_templates.json  pull_latest.py  push_block.py  sync_archive.py
scripts/notifications/: telegram.py
scripts/review/: README.md  narrate.py  render_chart.py  weekly_metrics.py  weekly_review.py
