[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powerlifting-coach"
version = "0.1.0"
description = "Strength coaching system with Hevy API integration"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
